--- a/HAL_AutoTransmission.ioc
+++ b/HAL_AutoTransmission.ioc
@@ -25,6 +25,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USART1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -84,7 +85,7 @@ RCC.PLLMCOFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=8000000
 RCC.TimSysFreq_Value=8000000
 RCC.USART1Freq_Value=8000000
-USART1.BaudRate=115200
+USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
