--- a/HAL_AutoTransmission.ioc
+++ b/HAL_AutoTransmission.ioc
@@ -35,8 +35,10 @@ Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
 Mcu.Pin2=PA9
 Mcu.Pin3=PA10
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin4=PB3
+Mcu.Pin5=PB4
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.PinsNb=7
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -55,6 +57,10 @@ PA10.Signal=USART1_RX
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB3.Locked=true
+PB3.Signal=GPIO_Input
+PB4.Locked=true
+PB4.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F0x0 Value Line
 PCC.MCU=STM32F030C8Tx
@@ -94,7 +100,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
 RCC.APB1TimFreq_Value=8000000
